--- a/kage.css
+++ b/kage.css
@@ -1,8 +1,10 @@
 li {
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 p {
+  font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
