--- a/kage.css
+++ b/kage.css
@@ -8,3 +8,61 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
+
+.item1 {
+  grid-area: myArea;
+}
+.grid-container {
+  grid-template-areas: "myArea myArea myArea myArea myArea";
+}
+
+.item1 {
+  grid-area: header;
+}
+.item2 {
+  grid-area: menu;
+}
+.item3 {
+  grid-area: main;
+}
+.item4 {
+  grid-area: right;
+}
+.item5 {
+  grid-area: footer;
+}
+
+.grid-container {
+  grid-template-areas:
+    "header header header header header"
+    "menu main main main right right"
+    "menu footer footer footer footer footer";
+}
+
+header {
+  grid-area: header;
+}
+
+.left {
+  grid-area: left;
+}
+
+.middle {
+  grid-area: middle;
+}
+
+.right {
+  grid-area: right;
+}
+
+.footer {
+  grid-area: footer;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    "header header header header header"
+    "left middle middle middle right"
+    "footer footer footer footer footer";
+}
